<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OrderZapp Buyers</string>
    <string name="appname">OrderZapp</string>
    <string name="area">Area</string>
    <string name="help">Help</string>
    <string name="help_description">Help Description</string>
    <string name="about">About</string>
    <string name="about_us">Information about Giant Leap Systems</string>
    <string name="mobile">Mobile Number</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="address1">Address 1</string>
    <string name="address2">Address 2</string>
    <string name="city">City</string>
    <string name="pincode">Pincode</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="signup">Sign-up</string>
    <string name="emailaddress">Email Address</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="signin">Sign-In</string>
    <string name="firstname">First Name</string>
    <string name="setting">Setting</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="one_time_password">Verification Token</string>
    <string name="verify_user">Verify User</string>
    <string name="tc_agree">By signing up you are agreeing to Terms and Privacy Policy of OrderZapp</string>
    <string name="txt_provider_startup_activity">Providers</string>
    <string name="txt_products_startup_activity">Products</string>
    <string name="save">Save</string>
    <string name="items">Items</string>
    <string name="total">Total :</string>
    <string name="total_colon">Total</string>
    <string name="quantity">Quantity : </string>
    <string name="price">Price</string>
    <string name="sub_total">Sub Total :</string>
    <string name="place_an_order">Place an Order</string>
    <string name="rs">\u20B9</string>
    <string name="rs_round"> (\u20B9) </string>
    <string name="forgotpassword"><u>Forgot Password?</u></string>
    <string name="regeneratetoken">Regenerate Verification Token</string>
    <string name="resetpassword">Forgot Password</string>
    <string name="confirmorder">Confirm Order</string>
    <string name="same_as_billing_address">Same as Billing Address</string>
    <string name="different_address">Different Address</string>
    <string name="pick_up">Pick Up</string>
    <string name="proceed_to_pay">Proceed To Pay</string>
    <string name="submit">Submit</string>
    <string name="your_verification_token_is">Your Verification token is:</string>
    <string name="expected_delivery_date">Expected Delivery Date</string>
    <string name="order_details">Order Details</string>
    <string name="product_name">Product name</string>
    <string name="qty">Qty</string>
    <string name="payment_details">Payment</string>
    <string name="mode">Mode</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="credit_card">Payment by Card</string>
    <string name="address_details">Address Details</string>
    <string name="billing_address">Billing Address </string>
    <string name="delivery_address">Delivery Address </string>
    <string name="delivery">Delivery </string>
    <string name="summary">Summary</string>
    <string name="grand_total">Grand Total :</string>
    <string name="order_no">Order No :</string>
    <string name="sub_order_no">Sub-Order No :</string>
    <string name="address">Address</string>
    <string name="type">Type</string>
    <string name="expected_date">Expected Date</string>
    <string name="seller">Seller :</string>
    <string name="delivery_charges">Charges :</string>
    <string name="delivery_type">Delivery Type </string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="create_date">Order Date</string>
    <string name="order_cancelled">Order Cancelled</string>
    <string name="availability_delivery_charges">Delivery Availability and Charges</string>
    <string name="addproductconfiguration">Add Product Configuration</string>
    <string name="imageoncake">Photo Print</string>
    <string name="change_address">Change</string>
    <string name="home_delivery">Home Delivery</string>
    <string name="special_instruction">Special Instruction</string>
    <string name="productconfiguration">Product Configuration : </string>
    <string name="message">MESSAGE</string>
    <string name="egg_eggless"><u>EGG/EGGLESS</u></string>
    <string name="egg">Egg</string>
    <string name="eggless">Eggless</string>
    <string name="food_type">FOOD TYPE</string>
    <string name="providernote">Note :</string>
    <string name="discount">Discount : </string>
    <string name="persent">%</string>
    <string name="deliverdatentime">Date And Time</string>
    <string name="select_your_area">Select your Area </string>
    <string name="select_pickup_address">Pick Up Address</string>
    <string name="delivery_type_with_colon">Delivery Type :</string>
    <string name="order_instruction">Order Instructions</string>
    <string name="no_products_in_cart">No Products Added In The Shopping Cart</string>
    <string name="bank_name">Bank Name : </string>
    <string name="transaction_id">Transaction Id : </string>
    <string name="card_type">Card Type : </string>
    <string name="txn_amount">Amount : </string>
    <string name="txn_details">Transaction Details</string>
    <string name="product_configuration_price">Product Configuration Price : </string>
    <string name="select_delivery_area_date">Select Delivery Area and Date</string>
    <string name="areawithcolon">Area : </string>
    <string name="deliverdateandtime">Date and Time : </string>
    <string name="delivery_date">Date : </string>
    <string name="deliverytime_slot">Time Slots :</string>
    <string name="availability">Availability : </string>
    <string name="description">Description :</string>
    <string name="base_price">Base Price : </string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_country_state_city_tabs">Select Area</string>
    <string name="title_activity_provider_details">Seller Details</string>
    <string name="expected_date_time">Expected Date And Time</string>
    <string name="deliverydetails">Delivery Details</string>
    <string name="type_colon">Type : </string>
    <string name="time_colon">Time :</string>
    <string name="address_colon">Address :</string>
    <string name="title_activity_feed_back">Feedback</string>
    <string name="cancel_order"> Cancel Order </string>
    <string name="confirm_cancel_order">Confirm Cancel Order</string>
    <string name="cancel_order_lbl">Select SubOrder ID you want to cancel</string>
    <string name="cancel_order_warning">Transaction processing fee will be deducted on canceling the order</string>
    <string name="no_suborder_cancel">No Suborder to cancel</string>
    <string name="feedback_hint">Please share your comments, concerns, suggestions, or complaints. We are here to help you out.</string>
    <string name="feedback">Feedback</string>
    <string name="countryCode">Select Country Code</string>
    <string name="contact_numbers">Contact No :</string>
    <string name="contact_details">Contacts Details :</string>
    <string name="username_withcolon">Username :</string>
    <string name="close">Close</string>
    <string name="firstname_withcolon">First Name :</string>
    <string name="mobile_withcolon">Mobile Number :</string>
    <string name="emailaddress_withcolon">Email Address :</string>
    <string name="userprofile">User Profile</string>
    <string name="language">Language :</string>
    <string name="title_activity_select_city">Select city</string>
    <string name="select_category">Select Category</string>
    <string name="selected_city"></string>
    <string name="please_select_city">Select City </string>
    <string name="title_activity_test">Test</string>
    <string name="total_discount">Total Discount</string>

</resources>
