<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="5dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/sub_order_no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="15sp"
            android:id="@+id/suborder_no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="left"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_marginRight="2dp"
            android:text="@string/seller" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/provider_name"
            android:textSize="16sp"
            android:textColor="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=","
            android:textSize="16sp"
            android:textColor="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/provider_area"
            android:textSize="16sp"
            android:layout_marginLeft="2dp"
            android:textColor="#000" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#000"
            android:text="@string/delivery_type_with_colon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delivery_type"
            android:textSize="16sp"
            android:layout_marginLeft="2dp"
            android:textColor="#000" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#304f6c" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#304f6c"
        android:orientation="horizontal">

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#fff" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:textStyle="bold"
            android:textColor="#fff"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/product_name" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#fff" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:textStyle="bold"
            android:textColor="#fff"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/qty" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#fff" />

        <LinearLayout
            android:layout_width="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textStyle="bold"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/price" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/rs_round"
                android:textSize="14sp"
                android:textColor="#fff"
                android:layout_marginRight="2dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#fff" />

        <LinearLayout
            android:layout_width="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#fff"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/total_colon" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/rs_round"
                android:textSize="14sp"
                android:textColor="#fff"
                android:layout_marginRight="2dp"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#fff" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#fff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="15sp"
            android:text="@string/delivery_charges" />
        <TextView
        android:layout_width="wrap_content"
        android:text="@string/rs"
        android:textSize="15sp"
        android:textColor="#000"
        android:layout_marginRight="2dp"
        android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#000"
            android:id="@+id/delivery_charge"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:gravity="right"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_marginRight="2dp"
            android:text="@string/sub_total" />

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/rs"
            android:textSize="15sp"
            android:textColor="#000"
            android:layout_marginRight="2dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_final_order_total"
            android:layout_width="wrap_content"
            android:textSize="15sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>